updated copy and about stuff

--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -1,4 +1,6 @@
 <h1>About</h1>
+<h3>This is a simple rails app to help me learn more aspects of rails.</h3>
+
 <p>
     Simple rails app built by <a href="http://vincentmilliken.com">vincentmilliken.com</a>
 </p>
